# dio-meetings

./: .gitignore  Description.md  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migration/: env.py
migration/versions/: 2025_06_09_0938-4016958ae697_initial_revision.py  2025_06_10_1601-c934f07a517d_initial_revision.py  2025_06_24_1546-0a4351efd7ac_initial_revision.py  2025_07_08_1357-38bafcf0755a_initial_revision.py
src/dio_meetings/: base.py  constants.py  entities.py  ioc.py  services.py  settings.py  template.py  templates.py  utils.py
src/dio_meetings/api/: app.py  lifespan.py  params.py  schemas.py
src/dio_meetings/api/routers/: __init__.py  audio.py  documents.py  meetings.py  protocols.py  results.py  tasks.py
src/dio_meetings/core/: base.py  domain.py  dto.py  entities.py  enums.py  exceptions.py  services.py  use_cases.py
src/dio_meetings/infrastructure/: s3.py
src/dio_meetings/infrastructure/ai/: __init__.py
src/dio_meetings/infrastructure/ai/salute_speech/: __init__.py  api.py  constants.py  schemas.py  transcripter.py  utils.py
src/dio_meetings/infrastructure/broker/: __init__.py  app.py  router.py  routers.py
src/dio_meetings/infrastructure/database/: base.py  models.py  repository.py  session.py
src/dio_meetings/infrastructure/documents/: __init__.py  microsoft_word.py  word.py
src/dio_meetings/infrastructure/llms/: giga_chat.py
src/dio_meetings/infrastructure/s3/: eceptions.py  repository.py
src/dio_meetings/infrastructure/stt/: __init__.py
(+30 files in other folders)
