[project]
name = "diomeetings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=14.3.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.4",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "dishka>=1.6.0",
    "fastapi[all]>=0.115.12",
    "faststream>=0.5.42",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-gigachat>=0.3.10",
    "librosa>=0.11.0",
    "markdown>=3.8",
    "minio>=7.2.15",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
